--- a/netcore/HealthCheck/HealthCheck/appsettings.json
+++ b/netcore/HealthCheck/HealthCheck/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClientEndpoint": "http://localhost:4200"
 }
